Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1900

Localhost connections to single-host clusters on Ubuntu don't skip TLS

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.10.0
    • perf, security

    Description

      On Ubuntu, it seems like we sometimes end up with connections from 127.0.1.1 to 127.0.0.1 when running a local cluster and connecting to to it from the same machine. This is because Ubuntu puts an entry with the host's external hostname in /etc/hosts as 127.0.1.1, and the tablet server ends up registering with that name. The code that detects loopback connections sees the "127.0.0.1 -> 127.0.1.1" and decides it's not loopback.

      Attachments

        Activity

          People

            grishick Greg Solovyev
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: